--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.7",
     "react-image-crop": "^11.0.5",
+    "react-infinite-scroll-component": "^6.1.1",
     "react-js-loader": "^0.1.3",
     "react-pdf": "^9.1.1",
     "react-popper": "^2.3.0",
